Bug 362186 entries from ldap address book not displayed (offline) - you can only search. p=James Andrewartha (trs80@tartarus.uwa.edu.au),r=me,sr=bienvenu